<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">StockApp</string>
    <string name="action_settings">Settings</string>
    <string name="stock_symbol_text_view">Enter Symbol</string>
    <string name="enter_stock_symbol_button">Enter</string>
    <string name="symbol_and_quotes">Stock Symbol and Quotes</string>
    <string name="day_low">Day\'s Low</string>
    <string name="day_high">Day\' high</string>
    <string name="month_low">Month\'s Low</string>
    <string name="month_high">Month\' high</string>
    <string name="day_movement">Today\'s movement</string>
    <string name="delete_all_symbols">Delete All Symbols</string>
    <string name="last_trade_price">Last Trade Price</string>
    <string name="ok">OK</string>
    <string name="change">Change</string>
    <string name="name">Name</string>
    <string name="cancel">Cancel</string>
    <string name="stock_quote">Quote</string>
    <string name="goto_web">Web</string>
    <string name="invalid_stock_symbol">Invalid Stock Symbol</string>
    <string name="missing_stock_symbol">Please enter stock symbol</string>
    <string name="yahoo_stock_url">http://finance.yahoo.com/q?s=</string>
    <string name="title_activity_stock_info">StockInfoActivity</string>
    <string name="hello_world">Hello world!</string>
    

</resources>
