<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.navpravartancorp.stockapp.StockIntoActivity$PlaceholderFragment" >

          
     <TableRow
            android:id="@+id/HeaderRow"
            android:layout_width="match_parent"
            android:padding="@dimen/activity_vertical_margin"
            android:layout_height="wrap_content" >

         <TextView
             android:id="@+id/companyNameTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"/>

        </TableRow>
        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="match_parent"
            android:padding="@dimen/activity_vertical_margin"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/daysLowTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/day_low" />

            <TextView
                android:id="@+id/daysHighTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/day_high" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="match_parent"
            android:padding="@dimen/activity_vertical_margin"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/monthLowTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/month_low" />

            <TextView
                android:id="@+id/monthHighTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/month_high" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="match_parent"
            android:padding="@dimen/activity_vertical_margin"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/lastTradePriceTextVeiw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/last_trade_price" />

            <TextView
                android:id="@+id/changeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/change" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:padding="@dimen/activity_vertical_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            <TextView
                android:id="@+id/daysRangeTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/day_movement" />

        </TableRow>

   

    </TableLayout>